# agentboss

./: .gitignore  CLAUDE.md  CODEX.md  README.md  boss.go  claude.go  codex.go  detect.go  expect.go  expect_test.go  go.mod  go.sum  process.go  status.go  tmux.go  wire.go
cli/agentboss/: attach.go  boss.go  expect.go  ls.go  main.go  output.go  run.go  send.go  status.go  wait.go  wire.go  wire_gen.go
conf/: conf.go
detectors/: claude.py  codex.py  generic.py
py/: pyproject.toml
py/src/agentboss/: __init__.py  agent.py  agent_test.py  claude.py  claude_test.py
scripts/: agentboss.py  claude_helpers.py
testdata/: mock_menu.py
