[project]
name = "agentboss"
version = "0.1.0"
description = "Python helpers for agentboss — atomic send+expect for TUI automation"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentboss"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
